[package]
name = "wave-interference"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ratbeam = { path = "../.." }
glow = "0.17.0"
tachyonfx = "0.25.0"
ratatui = "0.30.0"
raw-window-handle = "0.6.2"
glutin-winit = "0.5.0"
winit = "0.30.13"
glutin = "0.32.3"
beamterm-core = "1.0.0"
